--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -22,12 +22,23 @@ android {
         viewBinding true
     }
 
+    signingConfigs {
+        release {
+            storeFile file("cryptonets-keystore")
+            storePassword "123456"
+            keyAlias "privateid"
+            keyPassword "123456"
+        }
+    }
+
     buildTypes {
         release {
+            signingConfig signingConfigs.release
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
